cargo-features = ["edition2024"]

[package]
name = "solana-pubkey-compare"
version = "0.1.0"
edition = "2024"
authors = ["mitch@switchboard.xyz"]
license = "MIT"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_pubkey_compare"
doctest = false

[dependencies]
solana-program = "*"
solana-address = "*"

[dev-dependencies]
solana-program-test = "*"
solana-sdk = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
cc = "1.0"
