cargo-features = ["edition2024"]

[package]
name = "solana-pubkey-compare"
version = "0.0.0-alpha0.0.0"
edition = "2024"
authors = ["mitch@switchboard.xyz"]
license = "MIT"
resolver = "2"
description = "High-performance Solana public key comparison using optimized BPF assembly"
keywords = ["solana", "blockchain", "pubkey", "bpf", "performance"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/switchboard-xyz/solana-pubkey-compare"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_pubkey_compare"
doctest = false

[build-dependencies]
cc = "1.0"
